# vanillaplus-rust

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GUIDE.md  README.md  mkdocs.yml
.github/workflows/: build_app.yml  build_test_release.yml  docs.yml  enforce_branch.yml  plugin.yml
docs/: commands.md  configuration.md  getting-started.md  index.md
docs/modules/: index.md  locator.md  motd.md  player.md  tablist.md
src/: config.rs  lib.rs
src/modules/: module.rs  motd.rs  player.rs
src/modules/mechanics/: locator.rs  motd.rs  player.rs  tablist.rs
