[package]
name = "vanillaplus"
version = "0.0.1"
edition = "2024"
authors = ["Xodium"]

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin" }
tracing = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
